Revert "fixed carosel to not collapse"
This reverts commit 3cadcff957b01fae4afce9247f2aad1962e0a9f7.

--- a/hhnmag.css
+++ b/hhnmag.css
@@ -751,8 +751,7 @@ a.button {
 
 .header-img{
     margin-bottom: 20px;
-    height: 315px;
-    position: relative;
+    text-align: center;
 }
 
 .header-img img{
